<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp">

        <LinearLayout
            android:id="@+id/ll_addDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/dubaiFoodFest"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/adText"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/notIntrested"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_played"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dubaiFoodFestPlayed"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/adTextPlayed"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@android:string/ok"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>